--- a/wear/src/main/res/layout/activity_predictions.xml
+++ b/wear/src/main/res/layout/activity_predictions.xml
@@ -77,10 +77,20 @@
                     android:id="@+id/grid_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:useDefaultMargins="true"
                     android:rowCount="2"
                     android:columnCount="2"
                     android:orientation="horizontal"/>
+
+                <ticwear.design.widget.PrimaryButton
+                    android:id="@+id/button_delete_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_delete"
+                    android:tint="@color/white"/>
 
                 <Space
                     android:layout_width="match_parent"
